# ua-ros-pkg

./: BoxTurtle.md  ClassInstructions.md  DeveloperInstall.md  DeveloperUpdate.md  FAQ.md  ProjectHome.md  SharedInstall.md  Stacks.md  Tips.md  Wubble2Robot.md  WubbleRobot.md
arrg/: make-all.sh
arrg/ua_apps/: stack.xml
arrg/ua_controllers/wubble_arm_kinematics/: CMakeLists.txt  manifest.xml
arrg/ua_controllers/wubble_arm_kinematics/include/wubble_arm_kinematics/: wubble_arm_ik.h  wubble_arm_ik_gen_f0.cpp  wubble_arm_ik_gen_f1.cpp  wubble_arm_ik_gen_f2.cpp  wubble_arm_ik_solver.h  wubble_arm_kinematics.h  wubble_arm_kinematics_constants.h  wubble_arm_kinematics_plugin.h  wubble_arm_kinematics_utils.h
arrg/ua_controllers/wubble_arm_kinematics/launch/: wubble_ik_larm_node.launch
arrg/ua_controllers/wubble_arm_kinematics/openrave_description/: erratic_base.env.xml  erratic_base.xml  wubble2.env.xml  wubble2.robot.xml  wubble_arm_kinbody.xml  wubble_arm_robot.xml
arrg/ua_controllers/wubble_arm_kinematics/openrave_description/variants/: wubble_arm_kinbody.xml  wubble_arm_kinbody_long.xml  wubble_arm_robot.xml  wubble_arm_robot_long.xml  wubble_arm_short_kinbody.xml  wubble_arm_short_robot.xml  wubble_arm_upgrip_robot.xml
arrg/ua_controllers/wubble_arm_kinematics/src/: main.cpp  wubble_arm_ik.cpp  wubble_arm_ik_solver.cpp  wubble_arm_kinematics.cpp  wubble_arm_kinematics_plugin.cpp  wubble_arm_kinematics_utils.cpp
arrg/ua_controllers/wubble_arm_kinematics/src/test/: test_single_ik.cpp
arrg/ua_drivers/: stack.xml
arrg/ua_experimental/: rosdep.yaml
arrg/ua_experimental/ultraspeech/: CMakeLists.txt  example_clipfile.txt  manifest.xml  ultraspeech.kdev4
arrg/ua_experimental/ultraspeech/launch/: stereocam.launch  ultraspeech.launch
arrg/ua_experimental/ultraspeech/msg/: Control.msg
arrg/ua_experimental/ultraspeech/msg/java/ros/pkg/ultraspeech/msg/: AudioStream.java  CurrentStim.java  SaveFile.java
arrg/ua_experimental/ultraspeech/msg/lisp/ultraspeech/: Control.lisp  _package.lisp  _package_AudioStream.lisp  _package_Control.lisp  _package_CurrentStim.lisp  _package_SaveFile.lisp  ultraspeech-msg.asd
arrg/ua_experimental/ultraspeech/msg/oct/ultraspeech/: ultraspeech_AudioStream.m  ultraspeech_Control.m  ultraspeech_CurrentStim.m  ultraspeech_SaveFile.m
arrg/ua_experimental/ultraspeech/src/: collect_video.cpp  data_collect.cpp  getuim.py  jack_audio_capture.cpp  logger.py  session2sound.py  subjectUI.py
arrg/ua_experimental/ultraspeech/src/dvgrab-3.5/: dvgrab.cc  dvgrab.h  ieee1394io.cc  main.cc
arrg/ua_experimental/ultraspeech/src/dvgrab-3.5/.deps/: dvgrab.Po  hdvframe.Po  ieee1394io.Po  v4l2reader.Po
arrg/ua_experimental/wubble_mdp/: CMakeLists.txt  cmake_install.cmake  manifest.xml
arrg/ua_experimental/wubble_mdp/include/wubble_mdp/: entity.h  environment.h  location.h  object.h  relations.h  robot.h
arrg/ua_experimental/wubble_mdp/nodes/: environment.py  test_simulation.py
arrg/ua_experimental/wubble_mdp/src/wubble_mdp/: entity.cpp  environment.cpp  item.cpp  location.cpp  object.cpp  relations.cpp  robot.cpp
arrg/ua_experimental/wubble_mdp/srv/: PerformAction.srv  SimulateAction.srv
arrg/ua_language/: rosdep.yaml  stack.xml
arrg/ua_robots/: stack.xml
arrg/ua_verbs/: stack.xml
arrg/ua_vision/: stack.xml
arrg/ua_vision/background_filters/: CMakeLists.txt  manifest.xml
arrg/ua_vision/background_filters/include/background_filters/: background_subtractor.h  common.h  lbp_background_subtractor.h
arrg/ua_vision/background_filters/launch/: background_averager.launch  rewrite_background_averager.launch  test_floor_filter.launch
arrg/ua_vision/background_filters/msg/: ObjectList.msg
arrg/ua_vision/background_filters/src/: background_averager.cpp  background_sampler.cpp  background_sampler_rewrite.cpp  background_sub.cpp  background_sub_rewrite.cpp  background_subtractor.cpp  ground_filter.cpp  lbp_background_subtractor.cpp  lbp_background_subtractor_node.cpp  object_tracker.cpp  overhead_filter.cpp  point_cloud_bg_subtractor.cpp  shape_finder.cpp  test.cpp
arrg/ua_vision/background_filters/src/background_filters/: bg_stats.py
arrg/ua_vision/background_filters/srv/: GetBgStats.srv
arrg/wubble_navigation_apps/: stack.xml
arrg/wubble_world/: stack.xml
config/: boxturtle.rosinstall  cturtle.rosconfig  fuerte-deb.rosinstall  groovy-deb.rosinstall  install_ros_shared  install_ros_user  shared.rosconfig  ua_ros_pkg_install.sh  user.rosconfig  wubble-guest.rosconfig  wubble.rosconfig
trunk/arrg/: LICENSE  make-all.sh
trunk/arrg/ua_experimental/ua_audio_capture/: CMakeLists.txt  audio_capture.cpp  audio_clip_writer.cpp  audio_dump.py  audio_read.py  classifyNode.py  manifest.xml
trunk/arrg/ua_experimental/ua_audio_capture/srv/: classify.srv
trunk/arrg/ua_vision/background_filters/: CMakeLists.txt  mainpage.dox  manifest.xml
trunk/arrg/ua_vision/background_filters/config/: background_filters.xml
trunk/arrg/ua_vision/background_filters/include/background_filters/: background_subtractor.h  common.h  floor_filter.h  lbp_background_subtractor.h
trunk/arrg/ua_vision/background_filters/launch/: background_averager.launch  rewrite_background_averager.launch
trunk/arrg/ua_vision/background_filters/msg/: ObjectList.msg  Test.msg
trunk/arrg/ua_vision/background_filters/src/: background_sampler.cpp  background_sampler_rewrite.cpp  background_sub.cpp  background_sub_rewrite.cpp  background_subtractor.cpp  background_subtractor_node.cpp  floor_filter.cpp  floor_filter_node.cpp  ground_filter.cpp  lbp_background_subtractor.cpp  lbp_background_subtractor_node.cpp  object_tracker.cpp  overhead_filter.cpp
trunk/arrg/ua_vision/background_filters/srv/: GetBgStats.srv
trunk/arrg/ua_vision/nmpt/: CMakeLists.txt  Makefile  manifest.xml  nmpt_box_filter_bug.patch  nmpt_ros.patch  nmptgcc4_4_1.patch
trunk/config/: cturtle-deb.rosinstall  cturtle.rosconfig  (+10 more)
wiki/: BoxTurtle.wiki  ClassInstructions.wiki  DeveloperInstall.wiki  DeveloperUpdate.wiki  FAQ.wiki  SharedInstall.wiki  Stacks.wiki  Tips.wiki  Wubble2Robot.wiki  WubbleRobot.wiki
(+2653 files in other folders)
